# VecMap

./: .gitattributes  .gitignore  BENCHMARK_FIX_SUMMARY.md  BENCHMARK_REPORT.md  BIORXIV_SUBMISSION_README.md  CHANGELOG.md  CONTRIBUTING.md  CRISPR_BENCHMARK_SUMMARY.md  DATA_AVAILABILITY.md  FM_INDEX_VS_VECMAP_ANALYSIS.md  GEO_TEST_README.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PERFORMANCE_GUIDE.md  PRE_PUBLICATION_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  REFERENCES.md  RELEASE_SUMMARY.md  ULTIMATE_BENCHMARK_ANALYSIS.md  compile_manuscript.sh  create_test_data.py  fm_index_vs_vecmap_ultimate.py  manuscript.md  manuscript_revised.md  manuscript_vecmap_biorxiv.tex  pyproject.toml  references.bib  reproduce.sh  requirements.txt  setup.py  setup_geo_test.sh  test_geo_data.py  test_geo_quick.py  validate_performance.py  vecmap_sota_benchmark.csv  visualize_benchmark.py
benchmarks/: README.md  performance_explanation.py
benchmarks/archived_experiments/: benchmark_production_features.py  vecmap_production.py  vecmap_production_benchmark_results.csv
benchmarks/results/: fresh_install_test_results.csv  ultimate_benchmark_results.csv
benchmarks/scripts/: analyze_performance_factors.py  benchmark_sota.py  benchmark_sota_simple.py  crispr_comprehensive_benchmark.py  crispr_tools_comparison.py  (+6 more)
docs/: DIAGRAM_PROMPT.md  FIGURE_DESCRIPTIONS.md
examples/: README.md  crispr_screen_demo.py
manuscript/: generate_figures.py
scripts/: create_manuscript_figures.py  crispr_benchmark_real.py  crispr_benchmark_simple.py  generate_real_figures.py
vecmap/: __init__.py
(+13 files in other folders)
