[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecmap"
version = "1.0.0"
description = "Ultrafast exact sequence matching in pure Python using NumPy vectorization"
readme = "README.md"
license = "MIT"
authors = [
    { name = "James M. Jordan", email = "jjordan@bio.fsu.edu" }
]
maintainers = [
    { name = "James M. Jordan", email = "jjordan@bio.fsu.edu" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.61.0",
]
keywords = ["bioinformatics", "sequence alignment", "CRISPR", "vectorization", "exact matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0"
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0"
]

[project.scripts]
vecmap = "vecmap.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/the-jordan-lab/VecMap"
"Bug Tracker" = "https://github.com/the-jordan-lab/VecMap/issues"
"Documentation" = "https://github.com/the-jordan-lab/VecMap/blob/main/README.md" 